# scenic

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  shmdata.pc.in
data/glade/: scenic.glade
doc/: gst_pipeline.odg
doc/examples/shared-video/: Makefile  README.txt  clutterexample.cpp  clutterexample.h  milhouse-shared-video.lunch  osgView.h  osgview.cpp  osgview.h
man/: milhouse-man.txt
po/: en.po  fr.po  scenic.pot
py/prototypes/detect-dc/: dc-output.txt  detect_dc.py
py/scenic/: application.py  communication.py  gui.py  streamer.py
py/scenic/devices/: cameras.py
py/scripts/: scenic.in
shmdata/: Makefile.am  shmdata.cpp  shmdata.h
shmdata/tests/: Makefile.am  check_hello.cpp
src/: Makefile.am
src/caps/: Makefile.am
src/caps/test/: Makefile.am
src/devices/: Makefile.am
src/gst/: Makefile.am  codec.cpp  local_video.cpp  pipeline.h  shared_video_sink.cpp  shared_video_sink.h  videoSender.cpp  videoSender.h  videoSource.cpp  videoSource.h  video_config.cpp  video_config.h  video_sender.cpp  video_sender.h  video_source.cpp  video_source.h
src/gtk_utils/: gtk_utils.cpp  gtk_utils.h
src/gutil/: Makefile.am
src/libsharedvideo/: Makefile  data-reader-example.cpp  data-reader-from-rtp-example.cpp  data-reader-to-rtp.cpp  data-reader.cpp  data-writer-example.cpp  data-writer-from-rtp-example.cpp  data-writer.cpp  osg-reader.cpp  pcd_reader.cpp  pcd_write.cpp  reader-clutter-actor.cpp  reader-example.cpp  reader-osg.cpp  shared-video-reader.cpp  shared-video-writer.cpp  shared-video-writer.h  shared-video.h  video-reader.cpp  video-writer.cpp  writer-example.cpp
src/main/: Makefile.am  examples.txt  milhouse.cpp  program_options.cpp
src/rtsp/: Makefile.am
src/rtsp/examples/: Makefile.am  gst-rtsp-cam.c
src/shared_video/: Makefile.am
src/shared_video/gstexample/: pipelines.txt
src/shared_video_examples/: Makefile  README.txt  clutterdemo.cpp  shared-video-reader.c  shared-video-writer.c
src/util/: Makefile.am
src/vumeter/: Makefile.am  vumeter.cpp
src/vumeter/test/: Makefile.am  main.c
utils/: gst_check.py
utils/jack-info/: Makefile.am  jack_info.c
